--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,7 +1,7 @@
 html
   head
     link(rel="stylesheet", href="/style.css")
-    title My Cat Website
+    title Our Database Website
     block head
   body
     .layout
