new files for pug

--- a/src/views/mixins/nav.pug
+++ b/src/views/mixins/nav.pug
@@ -3,4 +3,5 @@ mixin navigation
     a(href="/")
       b My Website
     a(href="/gallery") Gallery 
+    a(href="/cities") Cities
     a(href="/about") About 
