--- a/src/views/mixins/nav.pug
+++ b/src/views/mixins/nav.pug
@@ -1,7 +1,7 @@
 mixin navigation
   nav
     a(href="/")
-      b My Website
+      b World Database
     a(href="/gallery") Gallery 
     a(href="/cities") Cities
     a(href="/about") About 
