counter working for population

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,4 +2,8 @@ extends layout.pug
 
 block content
   h1 WELCOME TO THE WORLD DATABASE
-  h2 The population of the world is: #{sumPopulation}
+  
+
+  asside
+    - const value = sumPopulation['SUM(Population)'];
+    h2 The population of the world is: #{Number(value).toLocaleString()}
