--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,4 +6,4 @@ block head
 block content
   h1 WELCOME TO THE WORLD DATABASE
   - const value = sumPopulation['SUM(Population)'];
-  h2(centre) The population of the world is: #{Number(value).toLocaleString()}
+  h2 The population of the world is: #{Number(value).toLocaleString()}
