--- a/src/views/mixins/nav.pug
+++ b/src/views/mixins/nav.pug
@@ -5,3 +5,4 @@ mixin navigation
     a(href="/gallery") Gallery 
     a(href="/cities") Cities
     a(href="/about") About 
+    a(href="/update") Update
