short about page

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -2,3 +2,4 @@ extends layout
 
 block content
   h2 #{title} 
+  p This page is here to give you a short run down of what is happening in this project, our goal is to create a very simple solution to many people's problems. we want a place where you can get information easily and reliably 
