--- a/src/static/cities.css
+++ b/src/static/cities.css
@@ -28,3 +28,9 @@
     font-family: monospace;
     text-align: right;
   }
+  select{
+    font-size: 18px;
+  }
+  label{
+    font-size: 24px;
+  }
