--- a/src/static/gallery.css
+++ b/src/static/gallery.css
@@ -1,12 +1,20 @@
 .gallery {
-  /* display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  width: 100%; */
-  columns: 3;
-  column-gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
 }
 
 .gallery-img {
+  display: block;
   width: 100%;
-  padding-bottom: 2rem;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+}
+
+.gallery-img:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
