--- a/src/static/update.css
+++ b/src/static/update.css
@@ -1,53 +1,65 @@
-/* Form container styles */
-.form-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background-color: #f2f2f2;
-    border-radius: 5px;
-  }
-  
-  /* Input field styles */
-  input[type=text], 
-  input[type=email], 
-  input[type=password], 
-  select, 
+:root {
+  --primary-color: #1b2727;
+  --secondary-color: #f2f2f2;
+  --border-color: #ccc;
+  --button-color: #4CAF50;
+}
 
-  textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-  }
-  
-  /* Label styles */
-  label {
-    font-size: 18px;
-    font-weight: bold;
-    display: block;
-    margin-bottom: 10px;
-    font-family: Arial, sans-serif;
-  }
-  
-  /* Submit button styles */
-  input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--secondary-color);
+}
+
+.form-container {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+input[type=text], 
+input[type=email], 
+input[type=password], 
+select, 
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  color: var(--primary-color);
+}
+
+label {
+  font-size: 18px;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
+  font-family: Arial, sans-serif;
+  color: var(--primary-color);
+}
+
+input[type=submit] {
+  background-color: var(--button-color);
+  color: #fff;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  transition: background-color 0.3s ease;
+}
+
+input[type=submit]:hover {
+  background-color: #3e8e41;
+}
