updated navigation bar

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,7 +1,9 @@
-html
+doctype html
+html(lang="en")
   head
-    link(rel="stylesheet", href="/style.css")
     title World Database
+    link(rel="stylesheet", href="/style.css")
+    link(rel="stylesheet", href="/navigation.css")
     block head
   body
     .layout
