--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -4,10 +4,11 @@ block head
   link(rel="stylesheet", href="/about.css")
 
 block content
-  h2 #{title} 
-  p This page is here to give you a short run down of what is happening in this project. Our goal is to create a very simple solution to many people's problems. We want a place where you can get information easily and reliably.
+  h1 About Us
 
-  h3 Meet the Team
+  p This page is here to give you a short run down of what we're all about. Our goal is to create a simple solution to many people's problems by providing accurate, reliable information in an easy-to-use format.
+
+  h2 Meet the Team
 
   .about
     .profile
