--- a/src/static/index.css
+++ b/src/static/index.css
@@ -1,71 +1,89 @@
 :root {
-    --main-color: #1b2727;
+  --main-color: #1b2727;
+  --secondary-color: #f2f2f2;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--secondary-color);
+  color: var(--main-color);
+}
+
+h1, h2 {
+  text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  margin: 0;
+  padding: 1rem;
+  color: var(--main-color);
+}
+
+p {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.2rem;
+}
+
+.text {
+  margin-top: 2rem;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.counter {
+  text-align: center;
+  font-size: 4rem;
+}
+
+a {
+  color: var(--main-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.75rem 1.5rem;
+  background-color: var(--main-color);
+  color: var(--secondary-color);
+  border-radius: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: all 0.2s ease-in-out;
+  border: none;
+}
+
+.btn:hover {
+  background-color: var(--secondary-color);
+  color: var(--main-color);
+  border-color: var(--main-color);
+}
+.counter-animation {
+  animation: count-up 1s ease-in-out;
+}
+
+.counter-animation {
+  animation: count-up 1s ease-in-out;
+}
+
+@keyframes count-up {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
   }
-  
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
-    color: var(--main-color);
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  h1, h2 {
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin: 0;
-    padding: 1rem;
-    color: var(--main-color);
-  }
-  
-  p {
-    text-align: center;
-    margin-top: 2rem;
-    font-size: 1.2rem;
-  }
-  
-  .text {
-    margin-top: 2rem;
-    font-size: 3rem;
-    text-align: center;
-  }
-  
-  .counter {
-    text-align: center;
-    font-size: 4rem;
-  }
-  
-  a {
-    color: var(--main-color);
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 1rem;
-  }
-  
-  .btn {
-    display: inline-block;
-    padding: 0.75rem 1.5rem;
-    background-color: var(--main-color);
-    color: #fff;
-    border-radius: 0.5rem;
-    text-align: center;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .btn:hover {
-    background-color: #fff;
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
-  }
-  
-  
+}
