--- a/src/views/mixins/nav.pug
+++ b/src/views/mixins/nav.pug
@@ -3,6 +3,6 @@ mixin navigation
     a(href="/")
       b World Database
     a(href="/gallery") Gallery
-    a(href="/cities") Cities
+    a(href="/cities") Data
     a(href="/about") About
     a(href="/update") Update
