--- a/src/static/navigation.css
+++ b/src/static/navigation.css
@@ -15,11 +15,11 @@ nav {
   }
   
   nav a:hover {
-    color: #ffd700;
+    color: #0300be;
   }
   
   nav a b {
     font-weight: 700;
-    color: #ffd700;
+    color: #d8de2c;
   }
   
