--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -32,3 +32,4 @@ block content
       p Creator 2 is a creative visionary who came up with the concept for the website and guided its development, ensuring it meets users' needs.
 
   p Our team is dedicated to providing an exceptional user experience and making sure that the content on the website is up-to-date, relevant, and engaging. We are constantly working to improve the site and expand its offerings, so be sure to check back often for new updates and features.
+  a.btn(href="https://www.roehampton.ac.uk", target="_blank") Go to University of Roehampton Page
