--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -12,24 +12,24 @@ block content
 
   .about
     .profile
-      img(src="https://via.placeholder.com/150", alt="Person 1")
-      h3 Editor 1
-      p Editor 1 is a dedicated content creator and editor who works tirelessly to ensure the website provides accurate and reliable information to users.
+      img(src="https://via.placeholder.com/150", alt="Krystian Mowinski")
+      h3 Krystian Mowinski
+      p Krystian Mowinski is a dedicated content creator and editor who works tirelessly to ensure the website provides accurate and reliable information to users.
 
     .profile
-      img(src="https://via.placeholder.com/150", alt="Person 2")
-      h3 Editor 2
-      p Editor 2 is a skilled writer and editor who brings their expertise to create engaging content that keeps users coming back for more.
+      img(src="https://via.placeholder.com/150", alt="Abdi")
+      h3 Abdi
+      p Abdi is a skilled writer and editor who brings their expertise to create engaging content that keeps users coming back for more.
 
     .profile
-      img(src="https://via.placeholder.com/150", alt="Person 3")
-      h3 Creator 1
-      p Creator 1 is a talented web developer who designed and built the website, ensuring it is user-friendly and easy to navigate.
+      img(src="https://via.placeholder.com/150", alt="Bayram Tosun")
+      h3 Bayram Tosun
+      p bayram Tosun is a talented web developer who designed and built the website, ensuring it is user-friendly and easy to navigate.
 
     .profile
-      img(src="https://via.placeholder.com/150", alt="Person 4")
-      h3 Creator 2
-      p Creator 2 is a creative visionary who came up with the concept for the website and guided its development, ensuring it meets users' needs.
+      img(src="https://via.placeholder.com/150", alt="Nouha Lamrani")
+      h3 Nouha Lamrani
+      p Nouha Lamrani is a creative visionary who came up with the concept for the website and guided its development, ensuring it meets users' needs.
 
   p Our team is dedicated to providing an exceptional user experience and making sure that the content on the website is up-to-date, relevant, and engaging. We are constantly working to improve the site and expand its offerings, so be sure to check back often for new updates and features.
   a.btn(href="https://www.roehampton.ac.uk", target="_blank") Go to University of Roehampton Page
