--- a/src/views/gallery.pug
+++ b/src/views/gallery.pug
@@ -7,4 +7,4 @@ block content
   h2 Gallery
   .gallery
     each idx in Array.from(Array(40).keys())
-        img.gallery-img(src=`https://source.unsplash.com/random/${idx}`, alt="")
+        img.gallery-img(src=`https://picsum.photos/500/500/?random=${idx}`, alt="")
