--- a/src/views/cities.pug
+++ b/src/views/cities.pug
@@ -24,11 +24,12 @@ block content
     option(value='Country', selected=value === 'Country') Country
     option(value='Country Language', selected=value === 'Country Language') Country language
 
-  // Add the search bar here
-  form(method="GET", action="/cities")
+  // Wrap the search bar in a container and align it to the right
+  form.search-container(method="GET", action="/cities")
     label(for="search") Search city:
     input(type="text", name="search", id="search", value=search)
     button(type="submit") Search
+
 
   if value === "Cities" || value === "Country" || value === "Country Language"
     h2 Cities, Countries, and Languages
