data section fix

--- a/src/views/cities.pug
+++ b/src/views/cities.pug
@@ -49,6 +49,6 @@ block content
             td #{row.CountryName}
             if value === "Cities"
               td #{row.CityName}
-              td.number #{row.CityPopulation}
+              td.number.fit #{row.CityPopulation}
             if value === "Country Language"
               td #{row.Language}
