--- a/src/static/cities.css
+++ b/src/static/cities.css
@@ -167,3 +167,19 @@ label[for="search"] {
 label:first-child {
   margin-right: 0.5rem;
 }
+
+.alphabet-bar {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+}
+
+.alphabet-bar button {
+  margin: 0 0.25rem 0.25rem;
+  padding: 0.25rem 0.5rem;
+}
+
+.alphabet-bar button:hover {
+  background-color: var(--clr-accent);
+}
