--- a/src/static/index.css
+++ b/src/static/index.css
@@ -13,17 +13,17 @@ body {
 
 
 h1, h2 {
-  text-align: center;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  margin: 0;
-  padding: 1rem;
-  color: var(--main-color);
+  text-align: center; /* Centers the text alignment for h1 and h2 elements */
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; /* Sets the font family for h1 and h2 elements to Impact, Haettenschweiler, 'Arial Narrow Bold', or a sans-serif font */
+  margin: 0; /* Removes margin from h1 and h2 elements */
+  padding: 1rem; /* Adds 1rem of padding to the h1 and h2 elements */
+  color: var(--main-color); /* Sets the text color of h1 and h2 elements to the value of the custom CSS variable "--main-color" */
 }
 
 p {
-  text-align: center;
-  margin-top: 2rem;
-  font-size: 1.2rem;
+  text-align: center; /* Centers the text alignment for p elements */
+  margin-top: 2rem; /* Adds 2rem of margin to the top of p elements */
+  font-size: 1.2rem; /* Sets the font size of p elements to 1.2rem */
 }
 
 .text {
